[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/scary-skull_0005_Layer-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/scary-skull_0006_Layer-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/scary-skull_0004_Layer-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/scary-skull_0000_Layer-7.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/scary-skull_0001_Layer-6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/scary-skull_0002_Layer-5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/scary-skull_0003_Layer-4.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemy.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sounds/hurt.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 6.65181

[sub_resource type="SphereShape" id=4]
radius = 0.693684

[node name="Enemy" type="Spatial"]
script = ExtResource( 8 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
billboard = 1
frames = SubResource( 1 )
frame = 1

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Sight" type="RayCast" parent="."]
enabled = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -0.315246, -0.455711, -0.205849, 0.630492, 0.911423, 0.411698 )

[node name="HurtArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="HurtArea"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="body_exited" from="HurtArea" to="." method="_on_HurtArea_body_exited"]
